manifest/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-app-touch-service-prod
  namespace: group-4
spec:
  selector:
    app: simple-node-app-touch-deployment-prod
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
